Widen the dropdown list for date format selection in order to fix the issue that the text is clipped with an ellipsis.

--- a/src/app/settings-dialog/date-time-settings/date-time-settings.component.scss
+++ b/src/app/settings-dialog/date-time-settings/date-time-settings.component.scss
@@ -19,7 +19,7 @@
 }
 
 .date-format-dropdown {
-  width: 170px;
+  width: 180px;
   margin-right: 30px;
 }
 
